# supernova2177_test

./: Dockerfile  Procfile  README.md  railway.json
super-nova-2177/: Dockerfile  app.py  docker-compose.yml
super-nova-2177/FE-Prototype/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
super-nova-2177/FE-Prototype/components/: CommentSection.tsx  CosmicChat.tsx  CreatePostModal.tsx  Dashboard.tsx  Governance.tsx  LikesDeslikes.tsx  LikesInfo.tsx  LiquidGlass.tsx  NetworkGraph.tsx  PostCard.tsx  Sidebar.tsx  VibeFeed.tsx  VoteControl.tsx
super-nova-2177/FE-Prototype/context/: AuthContext.tsx
super-nova-2177/FE-Prototype/services/: api.ts  geminiService.ts
super-nova-2177/backend/: Dockerfile  __init__.py  app.py  db_utils.py  requirements-ml.txt  requirements.txt  votes_router.py
super-nova-2177/backend/supernova_2177_ui_weighted/: auth_utils.py  harmonizer_schema.py  login_router.py  superNova_2177.py  supernova_2177.py
super-nova-2177/backend/supernova_2177_ui_weighted/backend/: Dockerfile
super-nova-2177/backend/supernova_2177_ui_weighted/tests/: test_login_flow.py
super-nova-2177/frontend/: README.md  next.config.mjs
super-nova-2177/frontend/app/api/ai/: route.js
super-nova-2177/frontend/content/filters/: FilterHeader.jsx  Filters.jsx
super-nova-2177/frontend/content/profile/: Profile.jsx  UserContext.jsx
super-nova-2177/frontend/content/proposal/content/: LikesDeslikes.jsx  LikesInfo.jsx
super-nova-2177/supernova_2177_ui_weighted/: pyproject.toml
